fix(novu-bridge): seven delivery defects from review, and compress the module
Defects (each proven with a temporary test that failed before the fix and
passed after; the tests were then removed, as with the rest of this PR):

- OTP login blocked by the consent gate. OTPs carry no user id and the gate
  denies a blank one; Helm turns the gate on, so every OTP on Kubernetes was
  SKIPPED / NB_PREFERENCE_DENIED. Core SMS (CORE_SMS / module CORE /
  CORE.SMS.*, not promotions) is now exempt; everything else is still gated.
- Email dropped when a provider is pinned: the override trigger never set
  to.email. One trigger now always carries phone and email.
- SMSCountry adapter usable for internal requests: any http(s) apiUrl was
  honoured and the upstream body echoed back. apiUrl is honoured only for the
  configured gateway host or novu.bridge.smscountry.allowed.hosts
  (NOVU_BRIDGE_SMSCOUNTRY_ALLOWED_HOSTS); the reply is logged redacted, never
  returned.
- Redelivery re-sent messages already sent. The pipeline now reads the ledger
  row first and does nothing when it is already SENT or DELIVERED.
- A directory outage looked like "nobody to notify" (NB_NO_RECIPIENTS), and an
  MDMS outage like "no routing"; neither was retried, and a failed read of
  NOTIFICATIONS.* could fall back to the legacy masters. Lookups now throw;
  config is loaded once per event from one namespace; a read failure with no
  cached copy is NB_CONFIG_UNAVAILABLE.
- Thin-path failures never reached the DLQ. Other recipients are still
  delivered, then the event is DLQ'd as NB_RESOLUTION_INCOMPLETE; a replay
  only retries what failed.
- Role pools silently truncated at 1,000 holders. More holders than the window
  now refuses the event with NB_RECIPIENT_LIMIT_EXCEEDED.

Compression, no behaviour change: comments cut to the non-obvious why,
records for data holders, one HTTP helper and one trigger in NovuClient,
shared helpers (util/Values, TtlCache), dead overloads/fields/properties
removed. Bri