@@ -4,6 +4,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.egov.common.contract.request.RequestInfo;
 import org.egov.novubridge.config.NovuBridgeConfiguration;
 import org.egov.novubridge.repository.DispatchLogRepository;
+import org.egov.novubridge.service.core.CoreSmsTranslator;
 import org.egov.novubridge.service.delivery.DeliveryProvider;
 import org.egov.novubridge.service.delivery.DeliveryProviderRegistry;
 import org.egov.novubridge.service.delivery.DeliveryResult;
@@ -12,6 +13,7 @@ import org.egov.novubridge.service.policy.ChannelPolicyClient;
 import org.egov.novubridge.service.provider.ProviderAvailability;
 import org.egov.novubridge.service.provider.ProviderCatalog;
 import org.egov.novubridge.util.PiiMask;
+import org.egov.novubridge.util.Values;
 import org.egov.novubridge.web.models.*;
 import org.egov.tracer.model.CustomException;
 import org.springframework.stereotype.Service;
@@ -20,24 +22,17 @@ import org.springframework.util.StringUtils;
 import java.util.*;
 
 /**
- * Pass-through delivery + tracking pipeline. Module-neutral: nothing below knows what a
- * complaint is.
- *
- * <p>The PRODUCER pre-renders ONE event per (recipient x channel): it has already resolved the
- * recipient, picked + filled + localized the template, and put the final text in
- * {@code renderedBody}. This pipeline does NO resolution. It validates the envelope, applies
- * the delivery gates in a fixed order, hands a {@link Dispatch} to the {@link DeliveryProvider}
- * the registry selects, and records exactly one {@code nb_dispatch_log} row for EVERY terminal
- * outcome — including envelope rejections, which used to go to the DLQ without a trace.
- *
- * <p>Vendor specifics (Novu workflow ids, Twilio WhatsApp envelopes, SMSCountry form posts)
- * live behind the provider seam; nothing here names a transport.
+ * Pass-through delivery pipeline: validate the pre-rendered envelope, apply the gates in a fixed
+ * order, hand a {@link Dispatch} to the selected {@link DeliveryProvider}, and record exactly one
+ * {@code nb_dispatch_log} row for every terminal outcome (envelope rejections included).
  */
 @Service
 @Slf4j
 public class DispatchPipelineService {
 
     private static final Set<String> KNOWN_CHANNELS = Set.of("SMS", "WHATSAPP", "EMAIL");
+    /** Ledger statuses that mean the message already left; a replay must not send it again. */
+    private static final Set<String> ALREADY_SENT = Set.of("SENT", "DELIVERED");
 
     private final EnvelopeValidator envelopeValidator;
     private final PreferenceServiceClient preferenceServiceClient;
@@ -67,150 +62,90 @@ public class DispatchPipelineService {
         return process(event, send, requestInfo, null);
     }
 
-    /**
-     * The same pipeline, told which inbound kind produced this envelope.
-     *
-     * <p>The three-argument method above is the pre-rendered path and is unchanged in every
-     * observable way: it passes {@code null}, which the repository writes as {@code PRERENDERED},
-     * exactly as it did when no such column existed. The resolution stage passes
-     * {@code RESOLVED}, so every row it causes says on its face which half of the box produced
-     * it — which is how "is this deployment on the thin path" is answered per message, in
-     * production, by looking at one column, rather than by reading a config that may have been
-     * dropped from an overlay.
-     *
-     * @param sourcePath {@link DispatchLogEntry#SOURCE_PATH_RESOLVED}, or null for pre-rendered
-     */
+    /** @param sourcePath {@link DispatchLogEntry#SOURCE_PATH_RESOLVED}, or null for pre-rendered */
     public DispatchResult process(NotificationEvent event, boolean send, RequestInfo requestInfo,
                                   String sourcePath) {
         log.info("Processing {} envelope: eventId={}, eventName={}, tenant={}, channel={}, send={}",
                 sourcePath == null ? "pre-rendered" : "resolved",
                 event.getEventId(), event.getEventName(), event.getTenantId(), event.getChannel(), send);
 
-        // Envelope rejections are persisted BEFORE they are thrown: the consumer still DLQs
-        // the event, but the operator can now see the rejection in the dispatch log.
+        // Rejections are written down BEFORE they are thrown; the consumer still DLQs the event.
         try {
             envelopeValidator.validate(event);
         } catch (CustomException ce) {
-            persistRejected(event, null, ce.getCode(), ce.getMessage(), sourcePath);
+            persistRejected(event, ce.getCode(), ce.getMessage(), sourcePath);
             throw ce;
         }
 
         DerivedContext context = deriveContext(event);
         context.setSourcePath(sourcePath);
-        String subscriberId = event.getSubscriberId();   // validator guarantees it
+        String subscriberId = event.getSubscriberId();
         context.setSubscriberId(subscriberId);
-
-        // subscriberId is masked too: when the recipient has no UUID it falls back
-        // to `tenantId:mobile`, so it can embed a raw phone number.
+        // subscriberId is masked too: without a UUID it falls back to tenantId:mobile.
         log.info("Derived context: eventId={}, channel={}, subscriberId={}, recipientPhone={}, email={}, locale={}",
                 event.getEventId(), context.getChannel(), PiiMask.mask(subscriberId),
                 PiiMask.mask(context.getRecipientMobile()), PiiMask.mask(context.getEmail()), context.getLocale());
 
-        // Optional channel-preference gate (the producer owns locale; preferences only gate delivery).
-        String recipientUuid = context.getRecipientUserId();
-        boolean preferenceAllowed = preferenceServiceClient.isChannelAllowed(
-                event.getTenantId(), recipientUuid, context.getRecipientMobile(), context.getChannel());
-        if (!preferenceAllowed) {
-            persist(event, context, "SKIPPED", "NB_PREFERENCE_DENIED",
-                    context.getChannel() + " preference denied", null, 1);
+        // Replay guard (DLQ replay, Kafka redelivery): checked before any gate so a replay can
+        // neither re-send nor overwrite the SENT row with a later SKIPPED.
+        String priorStatus = dispatchLogRepository.findStatus(
+                context.getTransactionId(), context.getChannel(), recipientValue(context));
+        if (priorStatus != null && ALREADY_SENT.contains(priorStatus)) {
+            log.info("Already {}: eventId={} txn={} channel={}; not sending again", priorStatus,
+                    event.getEventId(), PiiMask.mask(context.getTransactionId()), context.getChannel());
             return DispatchResult.builder()
-                    .valid(true)
-                    .preferenceAllowed(false)
-                    .derivedContext(context)
-                    .novuTriggered(false)
-                    .diagnostics(Collections.singletonList("Preference denied"))
+                    .valid(true).preferenceAllowed(true).derivedContext(context).novuTriggered(false)
+                    .diagnostics(List.of("Already " + priorStatus + " for this transaction; not sent again"))
                     .build();
+        }
+
+        if (!CoreSmsTranslator.isConsentExempt(event)
+                && !preferenceServiceClient.isChannelAllowed(event.getTenantId(), context.getRecipientUserId(),
+                        context.getRecipientMobile(), context.getChannel())) {
+            persist(event, context, "SKIPPED", "NB_PREFERENCE_DENIED", context.getChannel() + " preference denied");
+            return skipped(context, "Preference denied").preferenceAllowed(false).build();
         }
 
         if (!send) {
-            persist(event, context, "RECEIVED", null, null, null, 1);
-            return DispatchResult.builder()
-                    .valid(true)
-                    .preferenceAllowed(true)
-                    .derivedContext(context)
-                    .novuTriggered(false)
-                    .diagnostics(Collections.singletonList("Validation only mode"))
-                    .build();
+            persist(event, context, "RECEIVED", null, null);
+            return skipped(context, "Validation only mode").build();
         }
 
         String channel = context.getChannel();
-        // Gate 1: unknown/null channel — never guess, never fall back to SMS.
-        if (!isKnownChannel(channel)) {
-            persist(event, context, "SKIPPED", "NB_UNSUPPORTED_CHANNEL",
-                    "Unknown channel: " + channel, null, 1);
-            return DispatchResult.builder()
-                    .valid(true).preferenceAllowed(true).derivedContext(context)
-                    .novuTriggered(false)
-                    .diagnostics(Collections.singletonList("Unsupported channel " + channel + " skipped"))
-                    .build();
+        // Never guess a channel, never fall back to SMS.
+        if (channel == null || !KNOWN_CHANNELS.contains(channel.toUpperCase())) {
+            return skip(event, context, "NB_UNSUPPORTED_CHANNEL", "Unknown channel: " + channel,
+                    "Unsupported channel " + channel + " skipped");
         }
-        // Gate 2: channel not enabled for THIS tenant (MDMS NotificationChannel row, else the
-        // env fallback) — e.g. WHATSAPP pre-onboarding.
         if (!channelPolicy.isEnabled(event.getTenantId(), channel)) {
-            persist(event, context, "SKIPPED", "NB_NO_PROVIDER",
-                    "Channel " + channel + " is not enabled for tenant " + event.getTenantId(), null, 1);
-            return DispatchResult.builder()
-                    .valid(true).preferenceAllowed(true).derivedContext(context)
-                    .novuTriggered(false)
-                    .diagnostics(Collections.singletonList("Channel " + channel + " has no enabled provider; skipped"))
-                    .build();
+            return skip(event, context, "NB_NO_PROVIDER",
+                    "Channel " + channel + " is not enabled for tenant " + event.getTenantId(),
+                    "Channel " + channel + " has no enabled provider; skipped");
         }
 
         Contact contact = buildContact(event, context);
-
-        // Contact gate (bridge-side defense): an EMAIL event needs an email; SMS/WHATSAPP
-        // need a phone. The bridge consumes shared topics and must defend independently of any
-        // producer's emission-side filter — a phone-only recipient on an EMAIL row would
-        // otherwise trigger the email workflow and phantom-SENT with no address.
-        boolean hasRequiredContact = "EMAIL".equalsIgnoreCase(channel)
-                ? StringUtils.hasText(contact.getEmail())
-                : StringUtils.hasText(contact.getPhone());
-        if (!hasRequiredContact) {
-            persist(event, context, "SKIPPED", "NB_CONTACT_MISSING",
-                    "Recipient has no " + ("EMAIL".equalsIgnoreCase(channel) ? "email" : "phone")
-                    + " for channel " + channel, null, 1);
-            return DispatchResult.builder()
-                    .valid(true).preferenceAllowed(true).derivedContext(context)
-                    .novuTriggered(false)
-                    .diagnostics(Collections.singletonList("Missing contact for channel " + channel))
-                    .build();
+        // The bridge consumes shared topics, so it defends independently of producer-side filters:
+        // an EMAIL row with no address would otherwise phantom-SENT.
+        boolean email = "EMAIL".equalsIgnoreCase(channel);
+        if (!StringUtils.hasText(email ? contact.getEmail() : contact.getPhone())) {
+            return skip(event, context, "NB_CONTACT_MISSING",
+                    "Recipient has no " + (email ? "email" : "phone") + " for channel " + channel,
+                    "Missing contact for channel " + channel);
         }
-
-        // WhatsApp template gate: a business-initiated WhatsApp message MUST reference an approved
-        // provider template. A producer emits WHATSAPP events with a null templateId when it found
-        // no approved provider template (in PGR: no matching NotificationProviderTemplate row) —
-        // persist an auditable SKIP here rather than fall through to a free-form send, which the
-        // provider rejects. Bridge-side defense: hold regardless of the producer.
+        // Business-initiated WhatsApp must use an approved template; the provider rejects free-form.
         if ("WHATSAPP".equalsIgnoreCase(channel) && !StringUtils.hasText(event.getTemplateId())) {
-            persist(event, context, "SKIPPED", "NB_TEMPLATE_NOT_APPROVED",
+            return skip(event, context, "NB_TEMPLATE_NOT_APPROVED",
                     "No approved provider template for this WhatsApp event; free-form WhatsApp is "
-                    + "rejected. Map an approved template in NotificationProviderTemplate.", null, 1);
-            return DispatchResult.builder()
-                    .valid(true).preferenceAllowed(true).derivedContext(context)
-                    .novuTriggered(false)
-                    .diagnostics(Collections.singletonList("WhatsApp event has no approved provider template; skipped"))
-                    .build();
+                            + "rejected. Map an approved template in NotificationProviderTemplate.",
+                    "WhatsApp event has no approved provider template; skipped");
         }
 
-        // The provider the tenant picked for this channel, if any. Its catalog type comes from
-        // the identifier itself (ProviderCatalog mints them with a type prefix), so knowing
-        // that an Ozeki integration needs its own request body costs no extra Novu call.
         String integrationIdentifier = channelPolicy.provider(event.getTenantId(), channel);
-
-        // Gate 3: the chosen provider must actually be usable. Novu ACCEPTS a trigger naming a
-        // deleted, disabled or wrong-channel integration and only fails the step internally, so
-        // without this the row would read SENT for a message that never left. Blank provider =
-        // nothing to check and the pre-catalog path is untouched; a Novu that cannot be asked
-        // fails OPEN (see ProviderAvailability) — the gate never becomes an outage of its own.
-        ProviderAvailability.Result availability =
-                providerAvailability.check(integrationIdentifier, channel);
+        // Novu ACCEPTS a trigger naming a deleted/disabled/wrong-channel integration and fails it
+        // internally, so without this check the row would read SENT for a message that never left.
+        ProviderAvailability.Result availability = providerAvailability.check(integrationIdentifier, channel);
         if (!availability.usable()) {
-            persist(event, context, "SKIPPED", "NB_PROVIDER_UNAVAILABLE", availability.getMessage(), null, 1);
-            return DispatchResult.builder()
-                    .valid(true).preferenceAllowed(true).derivedContext(context)
-                    .novuTriggered(false)
-                    .diagnostics(Collections.singletonList(availability.getMessage()))
-                    .build();
+            return skip(event, context, "NB_PROVIDER_UNAVAILABLE", availability.message(), availability.message());
         }
 
         Dispatch dispatch = Dispatch.builder()
@@ -233,16 +168,16 @@ public class DispatchPipelineService {
         try {
             result = provider.send(dispatch);
         } catch (CustomException ce) {
-            persist(event, context, "FAILED", ce.getCode(), ce.getMessage(), null, 1);
-            throw ce;   // consumer logs + DLQs as before
+            persist(event, context, "FAILED", ce.getCode(), ce.getMessage());
+            throw ce;
         } catch (Exception e) {
-            persist(event, context, "FAILED", "NB_DELIVERY_ERROR", e.getMessage(), null, 1);
+            persist(event, context, "FAILED", "NB_DELIVERY_ERROR", e.getMessage());
             throw e;
         }
 
         if (!result.isAccepted()) {
             persist(event, context, "FAILED", result.getProviderCode(), result.getProviderMessage(),
-                    result.getRawResponse(), 1, result.getProviderRef());
+                    result.getRawResponse(), result.getProviderRef());
             return DispatchResult.builder()
                     .valid(true).preferenceAllowed(true).derivedContext(context)
                     .novuTriggered(false).novuStatusCode(result.getStatusCode())
@@ -254,12 +189,9 @@ public class DispatchPipelineService {
         log.info("Dispatch accepted: eventId={}, channel={}, provider={}, statusCode={}, ref={}, txn={}",
                 event.getEventId(), channel, provider.id(), result.getStatusCode(), result.getProviderRef(),
                 PiiMask.mask(context.getTransactionId()));
-
-        persist(event, context, "SENT", null, null, result.getRawResponse(), 1, result.getProviderRef());
+        persist(event, context, "SENT", null, null, result.getRawResponse(), result.getProviderRef());
         return DispatchResult.builder()
-                .valid(true)
-                .preferenceAllowed(true)
-                .derivedContext(context)
+                .valid(true).preferenceAllowed(true).derivedContext(context)
                 .novuTriggered(true)
                 .novuStatusCode(result.getStatusCode())
                 .novuResponse(result.getRawResponse())
@@ -267,16 +199,25 @@ public class DispatchPipelineService {
                 .build();
     }
 
-    private boolean isKnownChannel(String channel) {
-        return channel != null && KNOWN_CHANNELS.contains(channel.toUpperCase());
+    /** Persist a SKIPPED row for a gate refusal and build the matching result. */
+    private DispatchResult skip(NotificationEvent event, DerivedContext context, String code,
+                                String rowMessage, String diagnostic) {
+        persist(event, context, "SKIPPED", code, rowMessage);
+        return skipped(context, diagnostic).build();
+    }
+
+    private static DispatchResult.DispatchResultBuilder skipped(DerivedContext context, String diagnostic) {
+        return DispatchResult.builder()
+                .valid(true).preferenceAllowed(true).derivedContext(context)
+                .novuTriggered(false)
+                .diagnostics(Collections.singletonList(diagnostic));
     }
 
     private Contact buildContact(NotificationEvent event, DerivedContext context) {
-        Contact contact = event.getContact();
-        if (contact != null) {
-            return contact;
+        if (event.getContact() != null) {
+            return event.getContact();
         }
-        // Fallback: a dry-run request without a contact block.
+        // A dry-run request without a contact block.
         return Contact.builder()
                 .userId(context.getRecipientUserId())
                 .type(context.getAudience())
@@ -306,15 +247,19 @@ public class DispatchPipelineService {
                 .build();
     }
 
-    private void persist(NotificationEvent event, DerivedContext context,
-                         String status, String errorCode, String errorMessage,
-                         Map<String, Object> providerResponse, Integer attemptCount) {
-        persist(event, context, status, errorCode, errorMessage, providerResponse, attemptCount, null);
+    /** The recipient half of the ledger's unique key (transaction_id, channel, recipient_value). */
+    private static String recipientValue(DerivedContext context) {
+        return StringUtils.hasText(context.getSubscriberId()) ? context.getSubscriberId() : context.getRecipientUserId();
     }
 
     private void persist(NotificationEvent event, DerivedContext context,
-                         String status, String errorCode, String errorMessage,
-                         Map<String, Object> providerResponse, Integer attemptCount, String providerRef) {
+                         String status, String errorCode, String errorMessage) {
+        persist(event, context, status, errorCode, errorMessage, null, null);
+    }
+
+    private void persist(NotificationEvent event, DerivedContext context, String status, String errorCode,
+                         String errorMessage, Map<String, Object> providerResponse, String providerRef) {
+        long now = System.currentTimeMillis();
         dispatchLogRepository.upsert(DispatchLogEntry.builder()
                 .providerRef(providerRef)
                 .isTest(false)
@@ -325,43 +270,34 @@ public class DispatchPipelineService {
                 .eventName(event.getEventName())
                 .tenantId(event.getTenantId())
                 .channel(context.getChannel())
-                .recipientValue(StringUtils.hasText(context.getSubscriberId())
-                        ? context.getSubscriberId() : context.getRecipientUserId())
+                .recipientValue(recipientValue(context))
                 .templateKey(resolveTemplateKey(event, context))
                 .status(status)
-                .attemptCount(attemptCount)
+                .attemptCount(1)
                 .lastErrorCode(errorCode)
                 .lastErrorMessage(errorMessage)
                 .providerResponse(providerResponse)
                 .sourcePath(context.getSourcePath())
-                .createdTime(System.currentTimeMillis())
-                .lastModifiedTime(System.currentTimeMillis())
+                .createdTime(now)
+                .lastModifiedTime(now)
                 .build());
     }
 
-    /**
-     * A {@code REJECTED} row for an event that failed envelope validation or carried no
-     * recipient. Every NOT NULL column gets an honest fallback so a malformed event can still
-     * be written down; nothing is invented beyond the literal {@code unknown} markers.
-     */
-    private void persistRejected(NotificationEvent event, DerivedContext context,
-                                 String errorCode, String errorMessage, String sourcePath) {
-        String channel = firstNonBlank(context != null ? context.getChannel() : null, event.getChannel(), "UNKNOWN");
-        String eventId = firstNonBlank(event.getEventId(), "unknown");
+    /** A REJECTED row for an envelope that failed validation; only literal {@code unknown} markers are invented. */
+    private void persistRejected(NotificationEvent event, String errorCode, String errorMessage, String sourcePath) {
+        String channel = Values.firstText(event.getChannel(), "UNKNOWN");
+        String eventId = Values.firstText(event.getEventId(), "unknown");
         Contact c = event.getContact();
-        String recipient = firstNonBlank(event.getSubscriberId(),
-                context != null ? context.getSubscriberId() : null,
+        String recipient = Values.firstText(event.getSubscriberId(),
                 c != null ? c.getUserId() : null, c != null ? c.getPhone() : null, "unknown");
-        String transactionId = firstNonBlank(context != null ? context.getTransactionId() : null,
-                event.getTransactionId(), eventId + ":" + channel);
         long now = System.currentTimeMillis();
         dispatchLogRepository.upsert(DispatchLogEntry.builder()
                 .eventId(eventId)
-                .transactionId(transactionId)
+                .transactionId(Values.firstText(event.getTransactionId(), eventId + ":" + channel))
                 .referenceNumber(resolveReferenceNumber(event))
-                .module(firstNonBlank(event.getModule(), "unknown"))
-                .eventName(firstNonBlank(event.getEventName(), "unknown"))
-                .tenantId(firstNonBlank(event.getTenantId(), "unknown"))
+                .module(Values.firstText(event.getModule(), "unknown"))
+                .eventName(Values.firstText(event.getEventName(), "unknown"))
+                .tenantId(Values.firstText(event.getTenantId(), "unknown"))
                 .channel(channel)
                 .recipientValue(recipient)
                 .templateKey(event.getTemplateKey())
@@ -375,53 +311,18 @@ public class DispatchPipelineService {
                 .build());
     }
 
-    private static String firstNonBlank(String... values) {
-        for (String v : values) {
-            if (StringUtils.hasText(v)) return v;
-        }
-        return null;
-    }
-
-    /**
-     * The ledger's {@code reference_number}: the producing module's own handle for whatever this
-     * message is about, so an operator can find every notification for one case on the Logs
-     * screen. Module-neutral, in this order:
-     *
-     * <ol>
-     *   <li>{@code entityId} — the envelope's own reference field. BOTH shipped producers always
-     *       set it (PGR the serviceRequestId, {@code CoreSmsTranslator} the generated id), so
-     *       for them this method returns exactly what the previous {@code event.getEntityId()}
-     *       returned and existing rows are byte-for-byte unchanged.</li>
-     *   <li>{@code data.referenceNumber} — the neutral escape hatch for a producer that carries
-     *       its reference in the data block rather than as an entity.</li>
-     *   <li>{@code data.complaintNo} — PGR's legacy key, kept as a fallback so an older or
-     *       partial complaint event (entityId omitted) still lands under its complaint number
-     *       instead of nothing.</li>
-     *   <li>{@code eventId} — last resort. Never null, so a row is always addressable; nothing
-     *       is invented, the event id is a real handle the producer holds.</li>
-     * </ol>
-     */
+    /** The ledger's reference_number: entityId, then data.referenceNumber, data.complaintNo (PGR legacy), eventId. */
     private static String resolveReferenceNumber(NotificationEvent event) {
         Map<String, Object> data = event.getData();
-        return firstNonBlank(event.getEntityId(),
-                text(data, "referenceNumber"),
-                text(data, "complaintNo"),
+        return Values.firstText(event.getEntityId(),
+                data == null ? null : Values.str(data.get("referenceNumber")),
+                data == null ? null : Values.str(data.get("complaintNo")),
                 event.getEventId());
     }
 
-    private static String text(Map<String, Object> data, String key) {
-        Object value = data == null ? null : data.get(key);
-        return value == null ? null : value.toString();
-    }
-
     /**
-     * Best-available template identity for the dispatch-log row: the explicit wire value
-     * ({@code templateKey} — whatever template identity the producer rendered with; PGR sends
-     * the MDMS NotificationTemplate uid) when the producer sends it; otherwise reconstructed
-     * from segments the event already carries verbatim — audience (contact.type),
-     * action/toState (data block), channel and locale. Events without an action/toState
-     * (e.g. OTP, and any producer that does not use that vocabulary) fall back to the
-     * eventName, which every envelope is required to carry.
+     * The producer's templateKey when sent; else reconstructed from audience.action.toState.channel[.locale];
+     * else the eventName (OTP and producers without that vocabulary).
      */
     private String resolveTemplateKey(NotificationEvent event, DerivedContext context) {
         if (StringUtils.hasText(event.getTemplateKey())) {
